@@ -2,11 +2,11 @@ name    = Astro-Constants
 author  = Boyd Duffee <duffee@cpan.org>
 license = Perl_5
 copyright_holder = Boyd Duffee
-copyright_year   = 2018
+copyright_year   = 2020
 
 main_module	= lib/Astro/Constants.pm
 
-version = 0.14
+version = 0.14.1
 
 [Prereqs]
 perl				= 5.006
@@ -16,6 +16,7 @@ Test::More			= 0
 Test::Number::Delta	= 0
 ; authordep XML::LibXML 
 ; authordep Modern::Perl
+; authordep Term::UI
 
 [PkgVersion]
 
